--- a/data/data.yml
+++ b/data/data.yml
@@ -1,2 +1,64 @@
-1: 100
-2: 200
+houses:
+  1: 10
+  2: 3
+  3: 7
+  4: 4
+  5: 4
+location_of_buttons:
+  button_house_1: (275, 270, 250, 80)
+  button_house_2: (650, 270, 250, 80)
+  button_house_3: (1025, 270, 250, 80)
+  button_house_4: (275, 620, 250, 80)
+  button_house_5: (650, 620, 250, 80)
+  button_of_stat: (50, 125, 170, 50)
+  login_button: (220, 220, 75, 23)
+  sighup_button_log: (330, 220, 75, 23)
+  signup_button: (280, 220, 75, 23)
+location_of_labels:
+  label_house_1: (300, 50, 200, 200)
+  label_house_2: (675, 50, 200, 200)
+  label_house_3: (1050, 50, 200, 200)
+  label_house_4: (300, 400, 200, 200)
+  label_house_5: (675, 400, 200, 200)
+  label_password: (160, 145, 81, 31)
+  label_password_log: (160, 145, 81, 31)
+  label_user: (160, 95, 81, 31)
+  label_user_log: (160, 95, 81, 31)
+  new_label_house_1: (275, 270, 250, 80)
+  new_label_house_2: (650, 270, 250, 80)
+  new_label_house_3: (1025, 270, 250, 80)
+  new_label_house_4: (275, 620, 250, 80)
+  new_label_house_5: (650, 620, 250, 80)
+names_of_buttons:
+- button_house_1
+- button_house_2
+- button_house_3
+- button_house_4
+- button_house_5
+- button_of_stat
+- signup_button
+- login_button
+- sighup_button_log
+names_of_labels:
+- label_house_1
+- label_house_2
+- label_house_3
+- label_house_4
+- label_house_5
+- new_label_house_1
+- new_label_house_2
+- new_label_house_3
+- new_label_house_4
+- new_label_house_5
+- label_user
+- label_password
+- label_user_log
+- label_password_log
+users:
+  admin:
+    password: leonid
+    1: 0
+    2: 0
+    3: 0
+    4: 0
+    5: 0
